<?xml version="1.0"?>
<package>
  <name>grizzly_desktop</name>
  <version>0.1.1</version>
  <description>Metapackage of things you want to visualize and control Grizzly from a desktop.</description>
  <maintainer email="yanma@clearpathrobotics.com">Yan Ma</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>grizzly_msgs</run_depend>
  <run_depend>grizzly_teleop</run_depend>
  <run_depend>grizzly_viz</run_depend>
  <run_depend>roboteq_msgs</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
