<?xml version="1.0"?>
<package>
  <name>grizzly_viz</name>
  <version>0.1.1</version>
  <description>Visualization and rviz helpers for Grizzly</description>

  <maintainer email="yanma@clearpathrobotics.com">Yan Ma</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- For roslaunch_add_file_check() macro -->
  <build_depend>roslaunch</build_depend>

  <run_depend>grizzly_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
